@@ -34,7 +34,7 @@
   <url>http://github.com/nielsbasjes/yauaa</url>
 
   <properties>
-    <antlr.version>4.6</antlr.version>
+    <antlr.version>4.7</antlr.version>
   </properties>
 
   <dependencies>
