@@ -130,7 +130,6 @@ config:
       AgentInformationUrl                  : 'http://sqlmap.org'
       HackerAttackVector                   : 'SQL Injection'
       HackerToolkit                        : 'Sqlmap'
-      __SyntaxError__                      : 'true'
 
 - matcher:
     require:
