@@ -106,7 +106,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Shell Shock'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 - test:
     input:
@@ -135,7 +134,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Shell Shock'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 - test:
     input:
@@ -164,7 +162,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Shell Shock'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 - test:
     input:
@@ -193,7 +190,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Shell Shock'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 - matcher:
     require:
@@ -573,7 +569,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Remote exec Joomla'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 # If there is ONLY a product name and nothing else then this is either manipulated or a Hacker.
 - matcher:
@@ -653,7 +648,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Unknown'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 - test:
     input:
@@ -681,7 +675,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Unknown'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 # For reference:
 #true <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF <<EOF' || wget
@@ -729,7 +722,6 @@ config:
       AgentNameVersionMajor                : 'Hacker'
       HackerAttackVector                   : 'Unknown'
       HackerToolkit                        : 'Unknown'
-      __SyntaxError__                      : 'true'
 
 # Hackers immitating googlebot --> wrong url
 - matcher:
