@@ -137,3 +137,5 @@ v2.0
 - Added generic annotation/setter based parsing
 - Added Apache Flink Mapper
 - Added Apache Beam function
+- Updated dependencies Antlr 4, Apache Hadoop, Apache Pig
+
